tests/semantic/valid/08_if_else.src
fn main() -> int {
    int x = 10;
    if (x > 5) {
        return 1;
    }
    return 2;
}
