tests/semantic/invalid/09_while_condition.src
fn main() -> int {
    int x = 5;
    while (x) {
        x = x - 1;
    }
    return x;
}
